--- a/sdnms_ui_bn.po
+++ b/sdnms_ui_bn.po
@@ -15,3 +15,5 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+# TODO: Add translation keys and values
